2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: added missing libs (for xcursor).

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnailer.c: (main): call g_thread_init

2007-06-06  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnailer.c: (main):
	Update for changes in thumbnailer API.

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnailer.c: (main): update for changes in thumbnailer API

2007-05-19  Sebastien Bacher  <seb128@ubuntu.com>

	* themus-theme-applier.desktop.in.in: use OnlyShowIn=; so the item is 
	not listed in the menu editor (Closes: #434956)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* themus-theme-applier.desktop.in.in: renamed Bugzilla product.

2007-02-14  Jens Granseuer  <jensgr@gmx.net>

	* theme-method.c: (fill_info_struct), (do_read_directory): populate the
	VFS file info fields properly so that nautilus shows e.g. read-only
	emblems in themes:// (fixes bug #145175)

2007-02-07  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Chistian Persch <chpe@svn.gnome.org>

	* themus-theme-applier.c: (run_apply_font_dialog), (main): port to
	GOption and unref the glade dialog when done. Fixes #336286.

2007-01-07  Thomas Wood  <thos@gnome.org>

	* themus-theme-applier.c: (main): Free the program variable correctly

2007-01-07  Thomas Wood  <thos@gnome.org>

	* themus-theme-applier.c: (main): Applied modified patch from bug 167063
	(themus-theme-applier crashes while running from command promt)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* theme-method.directory.in: add encoding key, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #338593)

2006-07-11  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix distclean build target

2006-04-05  Glynn Foster <glynn.foster@sun.com>

        * Makefile.am: Move the .directory files to
        $datadir/desktop-directories. Fixes #334405.

2005-11-14  Sebastien Bacher  <seb128@debian.org>
