@@ -1,5 +1,9 @@
 2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* Makefile.am: link to $XCURSOR_LIBS, not GNOMECC_CAPPLETS_LIBS.
+
+2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	* Makefile.am: added missing libs (for xcursor).
 
 2007-07-05  Jens Granseuer  <jensgr@gmx.net>
